fixed width on mobile

--- a/core/static/assets/css/black-dashboard.css
+++ b/core/static/assets/css/black-dashboard.css
@@ -22,8 +22,7 @@
 }
 
 .login-container {
-  width: 40%;
-  
+  min-width:400px;
   padding: 50px;
   margin-right: auto;
   margin-left: auto;
